Feature : "클래스 이름변경, Npc 수정, 폰트매니저 작성."

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -274,16 +274,14 @@
     <ClInclude Include="..\Header\NearReactMoonObj.h" />
     <ClInclude Include="..\Header\NearReactMushroom.h" />
     <ClInclude Include="..\Header\NearReactObj.h" />
-    <ClInclude Include="..\Header\NPC.h" />
-    <ClInclude Include="..\Header\NPCCow.h" />
-    <ClInclude Include="..\Header\NPCSheep.h" />
-    <ClInclude Include="..\Header\NPCText.h" />
+    <ClInclude Include="..\Header\Npc.h" />
+    <ClInclude Include="..\Header\Npc_Cow.h" />
+    <ClInclude Include="..\Header\Npc_Sheep.h" />
     <ClInclude Include="..\Header\PlantBall.h" />
     <ClInclude Include="..\Header\PlantCannon.h" />
     <ClInclude Include="..\Header\Particle_FixedLeaf.h" />
     <ClInclude Include="..\Header\Particle_MapCircle.h" />
     <ClInclude Include="..\Header\Particle_MovingLeaf.h" />
-    <ClInclude Include="..\Header\NPCTextBox.h" />
     <ClInclude Include="..\Header\Player_Bullet_Bomb.h" />
     <ClInclude Include="..\Header\Player_Bullet_GolemFist.h" />
     <ClInclude Include="..\Header\Player_Bullet_Lightning.h" />
@@ -339,10 +337,10 @@
     <ClInclude Include="..\Header\TrashSlime.h" />
     <ClInclude Include="..\Header\Turret.h" />
     <ClInclude Include="..\Header\Tree.h" />
-    <ClInclude Include="..\Header\TutorialNPC.h" />
     <ClInclude Include="..\Header\UIMgr.h" />
     <ClInclude Include="..\Header\UI_BossHP.h" />
     <ClInclude Include="..\Header\UI_Cursor.h" />
+    <ClInclude Include="..\Header\UI_Dialog.h" />
     <ClInclude Include="..\Header\UI_ItemInfo.h" />
     <ClInclude Include="..\Header\UI_MonsterHP.h" />
     <ClInclude Include="..\Header\UI_Pages.h" />
@@ -451,16 +449,14 @@
     <ClCompile Include="..\Code\NearReactMoonObj.cpp" />
     <ClCompile Include="..\Code\NearReactMushroom.cpp" />
     <ClCompile Include="..\Code\NearReactObj.cpp" />
-    <ClCompile Include="..\Code\NPC.cpp" />
-    <ClCompile Include="..\Code\NPCCow.cpp" />
-    <ClCompile Include="..\Code\NPCSheep.cpp" />
-    <ClCompile Include="..\Code\NPCText.cpp" />
+    <ClCompile Include="..\Code\Npc.cpp" />
+    <ClCompile Include="..\Code\Npc_Cow.cpp" />
+    <ClCompile Include="..\Code\Npc_Sheep.cpp" />
     <ClCompile Include="..\Code\PlantBall.cpp" />
     <ClCompile Include="..\Code\PlantCannon.cpp" />
     <ClCompile Include="..\Code\Particle_FixedLeaf.cpp" />
     <ClCompile Include="..\Code\Particle_MapCircle.cpp" />
     <ClCompile Include="..\Code\Particle_MovingLeaf.cpp" />
-    <ClCompile Include="..\Code\NPCTextBox.cpp" />
     <ClCompile Include="..\Code\Player_Bullet_Bomb.cpp" />
     <ClCompile Include="..\Code\Player_Bullet_GolemFist.cpp" />
     <ClCompile Include="..\Code\Player_Bullet_Lightning.cpp" />
@@ -515,10 +511,10 @@
     <ClCompile Include="..\Code\TrashSlime.cpp" />
     <ClCompile Include="..\Code\Turret.cpp" />
     <ClCompile Include="..\Code\Tree.cpp" />
-    <ClCompile Include="..\Code\TutorialNPC.cpp" />
     <ClCompile Include="..\Code\UIMgr.cpp" />
     <ClCompile Include="..\Code\UI_BossHP.cpp" />
     <ClCompile Include="..\Code\UI_Cursor.cpp" />
+    <ClCompile Include="..\Code\UI_Dialog.cpp" />
     <ClCompile Include="..\Code\UI_ItemInfo.cpp" />
     <ClCompile Include="..\Code\UI_MonsterHP.cpp" />
     <ClCompile Include="..\Code\UI_Pages.cpp" />
