--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -355,6 +355,7 @@
     <ClInclude Include="..\Header\UI_Dialog.h" />
     <ClInclude Include="..\Header\UI_ItemInfo.h" />
     <ClInclude Include="..\Header\UI_MonsterHP.h" />
+    <ClInclude Include="..\Header\UI_Notification.h" />
     <ClInclude Include="..\Header\UI_Pages.h" />
     <ClInclude Include="..\Header\UI_AdventureBook.h" />
     <ClInclude Include="..\Header\UI_BookBackground.h" />
@@ -541,6 +542,7 @@
     <ClCompile Include="..\Code\UI_Dialog.cpp" />
     <ClCompile Include="..\Code\UI_ItemInfo.cpp" />
     <ClCompile Include="..\Code\UI_MonsterHP.cpp" />
+    <ClCompile Include="..\Code\UI_Notification.cpp" />
     <ClCompile Include="..\Code\UI_Pages.cpp" />
     <ClCompile Include="..\Code\UI_AdventureBook.cpp" />
     <ClCompile Include="..\Code\UI_BookBackground.cpp" />
